# map_explorer

./: .dir-locals.el  CMakeLists.txt  Dockerfile  Dockerfile.minimal  LICENSE  README.md  crafted_map.map  run_clang_check.sh
include/: AStarPathFinder.h  Cell.h  Compositor.h  ConsoleCellView.h  ConsoleMapView.h  ConsolePathView.h  ConsoleViewBackend.h  DijkstraPathFinder.h  IMapView.h  IPathFinder.h  IPathView.h  Logging.h  Map.h  Path.h  PathViewFactory.h  Renderer.h  Utils.h  ViewBackendFactory.h
include/factories/: MapViewFactory.h  PathFinderFactory.h  PathViewFactory.h  ViewBackendFactory.h
include/interfaces/: IMapView.h  IPathFinder.h  IPathView.h  IViewBackend.h
include/utils/: AdjacentCellIterator.h  Constants.h  Types.h
src/: AStarPathFinder.cc  CMakeLists.txt  Cell.cc  ConsoleMapView.cc  ConsolePathView.cc  ConsoleViewBackend.cc  DijkstraPathFinder.cc  Map.cc  Path.cc  Renderer.cc  main.cc
unittests/: AdjacentCellIteratorTest.cc  CMakeLists.txt  DijkstraPathFinderTest.cc  MapTest.cc  PathFinderTest.cc  test_dijkstra_path_finder.cc  test_iterator.cc  test_main.cc  test_map.cc
